--- a/pom.xml
+++ b/pom.xml
@@ -66,16 +66,17 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <outputDirectory>${basedir}/../../output</outputDirectory>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
-        <!--Bukkit API-->
-        <dependency>
-                <groupId>org.bukkit</groupId>
-                <artifactId>bukkit</artifactId>
-                <version>1.14.4-R0.1-SNAPSHOT</version>
-                <scope>provided</scope>
-        </dependency>
          <!--Worldguard dependency-->
         <dependency>
                 <groupId>com.sk89q.worldguard</groupId>
@@ -113,6 +114,13 @@
                         <artifactId>bukkit</artifactId>
                     </exclusion>
                 </exclusions>
+        </dependency>
+        <!--Spigot dependency-->
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.15.1-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
