--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <outputDirectory>${basedir}/../../output</outputDirectory>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
     <dependencies>
@@ -76,6 +85,13 @@
                 <version>1.14.4-R0.1-SNAPSHOT</version>
                 <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.15.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
          <!--Worldguard dependency-->
         <dependency>
                 <groupId>com.sk89q.worldguard</groupId>
