--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.3.1</version>
                 <configuration>
-                    <outputDirectory>${basedir}/../../output</outputDirectory>
+                    <outputDirectory>${basedir}/../output</outputDirectory>
                 </configuration>
             </plugin>
 
@@ -131,6 +131,13 @@
                         <artifactId>bukkit</artifactId>
                     </exclusion>
                 </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>me.justeli.common.api</groupId>
+            <artifactId>API</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
